--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,12 @@
-os:
-  - linux
-  - osx
-
 language: go
-
 sudo: false
 
 go:
-  - 1.5.3
-
-before_install:
-  - go get github.com/mattn/goveralls
-  - go get golang.org/x/tools/cmd/cover
-  - go get github.com/whyrusleeping/gx
-  - go get github.com/whyrusleeping/gx-go
-
-install:
-  - gx --verbose install --global
-  - gx-go rewrite
+  - 1.6.2
+  - release
+  - tip
 
 script:
-  - $HOME/gopath/bin/goveralls -service="travis-ci"
+  - make test
 
-cache:
-    directories:
-        - $GOPATH/src/gx
+env: TEST_NO_FUSE=1 TEST_VERBOSE=1
