--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,20 @@
+os:
+    - linux
+    - osx
+
 language: go
-sudo: false
 
 go:
-  - 1.6.2
-  - release
-  - tip
+    - 1.6.3
+
+install: true
 
 script:
-  - make test
+    - make deps
+    - gx-go rewrite
+    - go get github.com/mattn/goveralls
+    - goveralls -service=travis-ci
 
-env: TEST_NO_FUSE=1 TEST_VERBOSE=1
+cache:
+    directories:
+        - $GOPATH/src/gx
