--- a/package.json
+++ b/package.json
@@ -54,6 +54,17 @@
       "hash": "QmPnFwZ2JXKnXgMw8CdBPxn7FWh6LLdjUjxV1fKHuJnkr8",
       "name": "go-multihash",
       "version": "1.0.8"
+    },
+    {
+      "author": "magik6k",
+      "hash": "QmUCfrikzKVGAfpE31RPwPd32fu1DYxSG7HTGCadba5Wza",
+      "name": "go-ds-badger",
+      "version": "1.6.1"
+    },
+    {
+      "hash": "QmSpg1CvpXQQow5ernt1gNBXaXV6yxyNqi7XoeerWfzB5w",
+      "name": "go-datastore",
+      "version": "3.1.0"
     }
   ],
   "gxVersion": "0.4.0",
